<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigurationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="100dp"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.Material3.ActionBar" />

    <Button
        android:id="@+id/btnTestNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnTornar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/btnTornar" />

    <TextView
        android:fontFamily="@font/baloo2_extrabold"
        android:id="@+id/tvConfiguracio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@color/brown"
        android:layout_marginStart="24dp"
        android:text="@string/tvConfiguracio" />

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/description_user"/>

    <TextView
        android:id="@+id/tvNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/tvNom"/>

    <TextView
        android:id="@+id/tvCorreu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:text="@string/tvEmail"/>

    <TextView
        android:fontFamily="@font/baloo2_extrabold"
        android:id="@+id/tvPreferencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@color/brown"
        android:text="@string/tvPreferencies"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="8dp">

        <!-- Notificaciones (Switch) -->
        <TextView
            android:id="@+id/tvNotificacions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tvswitchNotificacions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchNotificacions"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNotificacions"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNotificacions"
            app:layout_constraintBottom_toBottomOf="@+id/tvNotificacions" />

        <!-- Idioma -->
        <TextView
            android:id="@+id/tvIdioma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tvIdioma"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinnerIdioma"
            app:layout_constraintTop_toBottomOf="@+id/tvNotificacions"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0" />

        <Spinner
            android:id="@+id/spinnerIdioma"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvIdioma"
            app:layout_constraintBottom_toBottomOf="@+id/tvIdioma" />

        <!-- Tema -->
        <TextView
            android:id="@+id/tvTema"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tvTema"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinnerTema"
            app:layout_constraintTop_toBottomOf="@+id/tvIdioma"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0" />

        <Spinner
            android:id="@+id/spinnerTema"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTema"
            app:layout_constraintBottom_toBottomOf="@+id/tvTema" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>