<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".MainUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:paddingTop="40dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.Material3.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTestNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        app:layout_constraintStart_toStartOf="@id/my_toolbar"
        android:layout_marginStart="300dp"/>

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo2_extrabold"
        android:text="@string/greetings"
        android:textColor="@color/brown"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"/>

    <!-- SEARCH BAR -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreeting"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="@color/brown"
        app:layout_constraintWidth_max="360dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/brown" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- GRID 2X2 DE BOTONS -->
    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout"
        app:layout_constraintWidth_max="360dp">

        <Button
            android:id="@+id/btnAvui"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/btn_avui_text"
            android:textAllCaps="true"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnTot"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/btn_tot_text"
            android:textAllCaps="true"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnFet"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/btn_fet_text"
            android:textAllCaps="true"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnCalendari"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/btn_calendari_text"
            android:textAllCaps="true"
            android:textSize="18sp"/>

    </GridLayout>

    <!-- BOTÓ PERSONALITZAR GAT -->
    <Button
        android:id="@+id/btnCustomizeCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/brown"
        android:contentDescription="@string/btn_customize_cat_desc"
        android:text="@string/btn_customize_cat"
        app:layout_constraintEnd_toEndOf="@id/gridButtons"
        app:layout_constraintTop_toBottomOf="@id/gridButtons" />

    <!-- IMATGE DE GAT -->
    <ImageView
        android:id="@+id/ivMainCat"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cat_image"
        android:scaleType="fitCenter"
        android:src="@drawable/gatodepie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCustomizeCat"
        app:layout_constraintBottom_toTopOf="@id/cardRecyclerView" />

    <TextView
        android:id="@+id/tvCatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo2_extrabold"
        android:text="@string/catname_test"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/ivMainCat"
        app:layout_constraintEnd_toEndOf="@id/ivMainCat"
        app:layout_constraintStart_toStartOf="@id/ivMainCat" />

    <!-- card contenidor de la llista -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/brown"
        app:layout_constraintBottom_toTopOf="@id/filaInferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMainCat">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/filaInferior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNewTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/baloo2_extrabold"
            android:gravity="start"
            android:padding="12dp"
            android:layout_marginStart="24dp"
            android:text="@string/tvnewTask"
            android:textColor="@color/brown"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNewList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/baloo2_extrabold"
            android:gravity="end"
            android:padding="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/tvnewList"
            android:textColor="@color/brown"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>